# cv-adventure

./: .woodpecker.yml  CHANGELOG.md  Cargo.toml  README.md  file.txt  index.html  package-lock.json  release-config.ts  tailwind.config.js
.woodpecker/: release.yml  tag.yml
games/pkg/: package.json  tutorial8_depth.d.ts  tutorial8_depth.js  tutorial8_depth_bg.wasm  tutorial8_depth_bg.wasm.d.ts
public/: gameimport.js
src/: lib.rs  main.rs
src/components/: counter_btn.rs  dynamic_video.rs  mod.rs  top_bar.rs  top_bar_expanding.rs  video_button.rs  video_player.rs
src/ffmpeg/: ffmpegSetup.js
src/pages/: birthday.rs  home.rs  mod.rs  test.rs
