[package]
name = "cv-adventure"
version = "0.1.0"
edition = "2021"
authors = ["fbr <frederikbroth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["gg-alloc"] }
wasm-bindgen-futures = "0.4.42"
ffmpeg-wasi = "0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dependencies.web-sys]
version = "0.3"
features = ["DataTransfer", "DragEvent", "File", "FileList", "Url", "Gpu"]

[dev-dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "DataTransfer",
  "DragEvent",
  "File",
] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
